@@ -36,6 +36,7 @@ public class CoffeeChatApplicationService {
     @Transactional
     public CoffeeChatApplicationResponseDto createCoffeeChatApp(Long userId, CoffeeChatApplicationCreateDto request) {
         // TODO: 동일한 유저가 동일한 커피챗에 중복 신청 불가능하게 수정
+        // TODO: 커피챗 신청 성공 시, 해당 시간대의 커피챗에 다른 사용자가 신청 요청하지 못하도록 동시성 제어 필요
 
         User user = getUser(userId);
         CoffeeChatInfo coffeeChatInfo = getCoffeeChatInfo(request.coffeeChatInfoId());
@@ -55,7 +56,8 @@ public class CoffeeChatApplicationService {
 
         return coffeeChatApps.stream()
             .map(CoffeeChatApplicationResponseDto::from)
-            .collect(Collectors.toList());
+            .toList();
+
     }
 
     @Transactional(readOnly = true)
@@ -72,11 +74,8 @@ public class CoffeeChatApplicationService {
         Long userId, Long coffeeChatAppId, CoffeeChatApplicationUpdateDto request) {
         CoffeeChatApplication coffeeChatApp = getCoffeeChatApplication(coffeeChatAppId);
 
-        validateCoffeeChatApplication(
-            userId,
-            coffeeChatApp.getMentee().getUserId(),
-            coffeeChatApp.getCoffeeChatInfo().getCoffeeChatInfoId()
-        );
+        validateCoffeeChatApplicant(userId, coffeeChatApp.getMentee().getUserId());
+        validateCoffeeChatInfo(coffeeChatApp.getCoffeeChatInfo().getCoffeeChatInfoId());
 
         // 상태가 대기 중일 때만 content 수정 가능
         if (coffeeChatApp.getStatus() != StatusType.PENDING) {
@@ -91,11 +90,9 @@ public class CoffeeChatApplicationService {
     @Transactional
     public void deleteCoffeeChatApp(Long userId, Long coffeeChatAppId) {
         CoffeeChatApplication coffeeChatApp = getCoffeeChatApplication(coffeeChatAppId);
-        validateCoffeeChatApplication(
-            userId,
-            coffeeChatApp.getMentee().getUserId(),
-            coffeeChatApp.getCoffeeChatInfo().getCoffeeChatInfoId()
-        );
+
+        validateCoffeeChatApplicant(userId, coffeeChatApp.getMentee().getUserId());
+        validateCoffeeChatInfo(coffeeChatApp.getCoffeeChatInfo().getCoffeeChatInfoId());
 
         coffeeChatAppRepository.delete(coffeeChatApp);
     }
@@ -111,18 +108,20 @@ public class CoffeeChatApplicationService {
             .orElseThrow(() -> new CustomException(ErrorCode.COFFEE_CHAT_NOT_FOUND));
     }
 
-    private CoffeeChatApplication getCoffeeChatApplication(Long coffeeChatAppId) {
+    protected CoffeeChatApplication getCoffeeChatApplication(Long coffeeChatAppId) {
         return coffeeChatAppRepository.findById(coffeeChatAppId)
             .orElseThrow(() -> new CustomException(ErrorCode.COFFEE_CHAT_APPLICATION_NOT_FOUND));
     }
 
-    private void validateCoffeeChatApplication(Long userId, Long menteeId, Long coffeeChatInfoId) {
-        // 해당 사용자가 작성한 커피챗 신청자인지 확인
+    // 해당 사용자가 작성한 커피챗 신청자인지 확인
+    private void validateCoffeeChatApplicant(Long userId, Long menteeId) {
         if (!userId.equals(menteeId)) {
             throw new CustomException(ErrorCode.NOT_COFFEE_CHAT_APPLICATION_OWNER);
         }
+    }
 
-        // 존재하는 커피챗 정보인지 확인
+    // 존재하는 커피챗 정보인지 확인
+    protected void validateCoffeeChatInfo(Long coffeeChatInfoId) {
         if(!coffeeChatInfoRepository.existsById(coffeeChatInfoId)) {
             throw new CustomException(ErrorCode.COFFEE_CHAT_NOT_FOUND);
         }
